--- a/config.toml
+++ b/config.toml
@@ -7,6 +7,8 @@ compile_sass = true
 # Whether to build a search index to be used later on by a JavaScript library
 build_search_index = false
 
+minify_html = true
+
 [markdown]
 
 [markdown.highlighting]
